--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "FantasyWorldMapGenerator",
   "version": "0.0.1",
-  "description": "A fap generator for fantasy world maps.",
+  "description": "A map generator for fantasy world maps.",
   "main": "game.js",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.dev.js",
